parser.output
Terminals unused in grammar

   ADD
   SUB
   MUL
   DIV
   LT
   GT


Grammar

    0 $accept: program "end of file"

    1 program: function_declaration_list

    2 function_declaration_list: function_declaration
    3                          | function_declaration_list function_declaration

    4 function_declaration: type Identifier '(' parameter_declaration_list ')' function_body

    5 type: NumberType
    6     | TextType
    7     | VoidType

    8 parameter_declaration_list: parameter_declaration
    9                           | parameter_declaration_list ',' parameter_declaration
   10                           | %empty

   11 parameter_declaration: NumberType Identifier
   12                      | TextType Identifier

   13 function_body: '{' statement_list '}'

   14 statement_list: statement
   15               | statement_list statement

   16 statement: parameter_declaration ';'
   17          | assignment ';'
   18          | print ';'
   19          | function_call ';'
   20          | while_loop
   21          | if
   22          | return ';'

   23 return: RETURN expression
   24       | RETURN String

   25 while_loop: While '(' expression ')' function_body

   26 function_call: Identifier '(' expression_list ')'

   27 if: IF '(' expression ')' function_body
   28   | IF '(' expression ')' function_body ELSE function_body

   29 print: PRINT expression
   30      | PRINT String

   31 assignment: Identifier '=' expression

   32 expression_list: expression
   33                | expression_list ',' expression

   34 expression: Identifier
   35           | Number
   36           | function_call
   37           | '-' expression
   38           | expression '+' expression
   39           | expression '-' expression
   40           | expression '*' expression
   41           | expression '/' expression
   42           | expression '<' expression
   43           | expression '>' expression
   44           | expression GE expression
   45           | expression LE expression
   46           | expression NE expression
   47           | expression EQ expression
   48           | '(' expression ')'


Terminals, with rules where they appear

"end of file" (0) 0
'(' (40) 4 25 26 27 28 48
')' (41) 4 25 26 27 28 48
'*' (42) 40
'+' (43) 38
',' (44) 9 33
'-' (45) 37 39
'/' (47) 41
';' (59) 16 17 18 19 22
'<' (60) 42
'=' (61) 31
'>' (62) 43
'{' (123) 13
'}' (125) 13
error (256)
GE (258) 44
LE (259) 45
EQ (260) 47
NE (261) 46
UMINUS (262)
IFX (263)
ELSE (264) 28
IF (265) 27 28
While (266) 25
ADD (267)
SUB (268)
MUL (269)
DIV (270)
PRINT (271) 29 30
LT (272)
GT (273)
RETURN (274) 23 24
NumberType (275) 5 11
TextType (276) 6 12
VoidType (277) 7
Number (278) 35
Identifier (279) 4 11 12 26 31 34
String (280) 24 30


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
program (40)
    on left: 1, on right: 0
function_declaration_list (41)
    on left: 2 3, on right: 1 3
function_declaration (42)
    on left: 4, on right: 2 3
type (43)
    on left: 5 6 7, on right: 4
parameter_declaration_list (44)
    on left: 8 9 10, on right: 4 9
parameter_declaration (45)
    on left: 11 12, on right: 8 9 16
function_body (46)
    on left: 13, on right: 4 25 27 28
statement_list (47)
    on left: 14 15, on right: 13 15
statement (48)
    on left: 16 17 18 19 20 21 22, on right: 14 15
return (49)
    on left: 23 24, on right: 22
while_loop (50)
    on left: 25, on right: 20
function_call (51)
    on left: 26, on right: 19 36
if (52)
    on left: 27 28, on right: 21
print (53)
    on left: 29 30, on right: 18
assignment (54)
    on left: 31, on right: 17
expression_list (55)
    on left: 32 33, on right: 26 33
expression (56)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48, on right:
    23 25 27 28 29 31 32 33 37 38 39 40 41 42 43 44 45 46 47 48


State 0

    0 $accept: . program "end of file"

    NumberType  shift, and go to state 1
    TextType    shift, and go to state 2
    VoidType    shift, and go to state 3

    program                    go to state 4
    function_declaration_list  go to state 5
    function_declaration       go to state 6
    type                       go to state 7


State 1

    5 type: NumberType .

    $default  reduce using rule 5 (type)


State 2

    6 type: TextType .

    $default  reduce using rule 6 (type)


State 3

    7 type: VoidType .

    $default  reduce using rule 7 (type)


State 4

    0 $accept: program . "end of file"

    "end of file"  shift, and go to state 8


State 5

    1 program: function_declaration_list .
    3 function_declaration_list: function_declaration_list . function_declaration

    NumberType  shift, and go to state 1
    TextType    shift, and go to state 2
    VoidType    shift, and go to state 3

    $default  reduce using rule 1 (program)

    function_declaration  go to state 9
    type                  go to state 7


State 6

    2 function_declaration_list: function_declaration .

    $default  reduce using rule 2 (function_declaration_list)


State 7

    4 function_declaration: type . Identifier '(' parameter_declaration_list ')' function_body

    Identifier  shift, and go to state 10


State 8

    0 $accept: program "end of file" .

    $default  accept


State 9

    3 function_declaration_list: function_declaration_list function_declaration .

    $default  reduce using rule 3 (function_declaration_list)


State 10

    4 function_declaration: type Identifier . '(' parameter_declaration_list ')' function_body

    '('  shift, and go to state 11


State 11

    4 function_declaration: type Identifier '(' . parameter_declaration_list ')' function_body

    NumberType  shift, and go to state 12
    TextType    shift, and go to state 13

    $default  reduce using rule 10 (parameter_declaration_list)

    parameter_declaration_list  go to state 14
    parameter_declaration       go to state 15


State 12

   11 parameter_declaration: NumberType . Identifier

    Identifier  shift, and go to state 16


State 13

   12 parameter_declaration: TextType . Identifier

    Identifier  shift, and go to state 17


State 14

    4 function_declaration: type Identifier '(' parameter_declaration_list . ')' function_body
    9 parameter_declaration_list: parameter_declaration_list . ',' parameter_declaration

    ')'  shift, and go to state 18
    ','  shift, and go to state 19


State 15

    8 parameter_declaration_list: parameter_declaration .

    $default  reduce using rule 8 (parameter_declaration_list)


State 16

   11 parameter_declaration: NumberType Identifier .

    $default  reduce using rule 11 (parameter_declaration)


State 17

   12 parameter_declaration: TextType Identifier .

    $default  reduce using rule 12 (parameter_declaration)


State 18

    4 function_declaration: type Identifier '(' parameter_declaration_list ')' . function_body

    '{'  shift, and go to state 20

    function_body  go to state 21


State 19

    9 parameter_declaration_list: parameter_declaration_list ',' . parameter_declaration

    NumberType  shift, and go to state 12
    TextType    shift, and go to state 13

    parameter_declaration  go to state 22


State 20

   13 function_body: '{' . statement_list '}'

    IF          shift, and go to state 23
    While       shift, and go to state 24
    PRINT       shift, and go to state 25
    RETURN      shift, and go to state 26
    NumberType  shift, and go to state 12
    TextType    shift, and go to state 13
    Identifier  shift, and go to state 27

    parameter_declaration  go to state 28
    statement_list         go to state 29
    statement              go to state 30
    return                 go to state 31
    while_loop             go to state 32
    function_call          go to state 33
    if                     go to state 34
    print                  go to state 35
    assignment             go to state 36


State 21

    4 function_declaration: type Identifier '(' parameter_declaration_list ')' function_body .

    $default  reduce using rule 4 (function_declaration)


State 22

    9 parameter_declaration_list: parameter_declaration_list ',' parameter_declaration .

    $default  reduce using rule 9 (parameter_declaration_list)


State 23

   27 if: IF . '(' expression ')' function_body
   28   | IF . '(' expression ')' function_body ELSE function_body

    '('  shift, and go to state 37


State 24

   25 while_loop: While . '(' expression ')' function_body

    '('  shift, and go to state 38


State 25

   29 print: PRINT . expression
   30      | PRINT . String

    '-'         shift, and go to state 39
    Number      shift, and go to state 40
    Identifier  shift, and go to state 41
    String      shift, and go to state 42
    '('         shift, and go to state 43

    function_call  go to state 44
    expression     go to state 45


State 26

   23 return: RETURN . expression
   24       | RETURN . String

    '-'         shift, and go to state 39
    Number      shift, and go to state 40
    Identifier  shift, and go to state 41
    String      shift, and go to state 46
    '('         shift, and go to state 43

    function_call  go to state 44
    expression     go to state 47


State 27

   26 function_call: Identifier . '(' expression_list ')'
   31 assignment: Identifier . '=' expression

    '('  shift, and go to state 48
    '='  shift, and go to state 49


State 28

   16 statement: parameter_declaration . ';'

    ';'  shift, and go to state 50


State 29

   13 function_body: '{' statement_list . '}'
   15 statement_list: statement_list . statement

    IF          shift, and go to state 23
    While       shift, and go to state 24
    PRINT       shift, and go to state 25
    RETURN      shift, and go to state 26
    NumberType  shift, and go to state 12
    TextType    shift, and go to state 13
    Identifier  shift, and go to state 27
    '}'         shift, and go to state 51

    parameter_declaration  go to state 28
    statement              go to state 52
    return                 go to state 31
    while_loop             go to state 32
    function_call          go to state 33
    if                     go to state 34
    print                  go to state 35
    assignment             go to state 36


State 30

   14 statement_list: statement .

    $default  reduce using rule 14 (statement_list)


State 31

   22 statement: return . ';'

    ';'  shift, and go to state 53


State 32

   20 statement: while_loop .

    $default  reduce using rule 20 (statement)


State 33

   19 statement: function_call . ';'

    ';'  shift, and go to state 54


State 34

   21 statement: if .

    $default  reduce using rule 21 (statement)


State 35

   18 statement: print . ';'

    ';'  shift, and go to state 55


State 36

   17 statement: assignment . ';'

    ';'  shift, and go to state 56


State 37

   27 if: IF '(' . expression ')' function_body
   28   | IF '(' . expression ')' function_body ELSE function_body

    '-'         shift, and go to state 39
    Number      shift, and go to state 40
    Identifier  shift, and go to state 41
    '('         shift, and go to state 43

    function_call  go to state 44
    expression     go to state 57


State 38

   25 while_loop: While '(' . expression ')' function_body

    '-'         shift, and go to state 39
    Number      shift, and go to state 40
    Identifier  shift, and go to state 41
    '('         shift, and go to state 43

    function_call  go to state 44
    expression     go to state 58


State 39

   37 expression: '-' . expression

    '-'         shift, and go to state 39
    Number      shift, and go to state 40
    Identifier  shift, and go to state 41
    '('         shift, and go to state 43

    function_call  go to state 44
    expression     go to state 59


State 40

   35 expression: Number .

    $default  reduce using rule 35 (expression)


State 41

   26 function_call: Identifier . '(' expression_list ')'
   34 expression: Identifier .

    '('  shift, and go to state 48

    $default  reduce using rule 34 (expression)


State 42

   30 print: PRINT String .

    $default  reduce using rule 30 (print)


State 43

   48 expression: '(' . expression ')'

    '-'         shift, and go to state 39
    Number      shift, and go to state 40
    Identifier  shift, and go to state 41
    '('         shift, and go to state 43

    function_call  go to state 44
    expression     go to state 60


State 44

   36 expression: function_call .

    $default  reduce using rule 36 (expression)


State 45

   29 print: PRINT expression .
   38 expression: expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '>' expression
   44           | expression . GE expression
   45           | expression . LE expression
   46           | expression . NE expression
   47           | expression . EQ expression

    GE   shift, and go to state 61
    LE   shift, and go to state 62
    EQ   shift, and go to state 63
    NE   shift, and go to state 64
    '>'  shift, and go to state 65
    '<'  shift, and go to state 66
    '-'  shift, and go to state 67
    '+'  shift, and go to state 68
    '*'  shift, and go to state 69
    '/'  shift, and go to state 70

    $default  reduce using rule 29 (print)


State 46

   24 return: RETURN String .

    $default  reduce using rule 24 (return)


State 47

   23 return: RETURN expression .
   38 expression: expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '>' expression
   44           | expression . GE expression
   45           | expression . LE expression
   46           | expression . NE expression
   47           | expression . EQ expression

    GE   shift, and go to state 61
    LE   shift, and go to state 62
    EQ   shift, and go to state 63
    NE   shift, and go to state 64
    '>'  shift, and go to state 65
    '<'  shift, and go to state 66
    '-'  shift, and go to state 67
    '+'  shift, and go to state 68
    '*'  shift, and go to state 69
    '/'  shift, and go to state 70

    $default  reduce using rule 23 (return)


State 48

   26 function_call: Identifier '(' . expression_list ')'

    '-'         shift, and go to state 39
    Number      shift, and go to state 40
    Identifier  shift, and go to state 41
    '('         shift, and go to state 43

    function_call    go to state 44
    expression_list  go to state 71
    expression       go to state 72


State 49

   31 assignment: Identifier '=' . expression

    '-'         shift, and go to state 39
    Number      shift, and go to state 40
    Identifier  shift, and go to state 41
    '('         shift, and go to state 43

    function_call  go to state 44
    expression     go to state 73


State 50

   16 statement: parameter_declaration ';' .

    $default  reduce using rule 16 (statement)


State 51

   13 function_body: '{' statement_list '}' .

    $default  reduce using rule 13 (function_body)


State 52

   15 statement_list: statement_list statement .

    $default  reduce using rule 15 (statement_list)


State 53

   22 statement: return ';' .

    $default  reduce using rule 22 (statement)


State 54

   19 statement: function_call ';' .

    $default  reduce using rule 19 (statement)


State 55

   18 statement: print ';' .

    $default  reduce using rule 18 (statement)


State 56

   17 statement: assignment ';' .

    $default  reduce using rule 17 (statement)


State 57

   27 if: IF '(' expression . ')' function_body
   28   | IF '(' expression . ')' function_body ELSE function_body
   38 expression: expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '>' expression
   44           | expression . GE expression
   45           | expression . LE expression
   46           | expression . NE expression
   47           | expression . EQ expression

    GE   shift, and go to state 61
    LE   shift, and go to state 62
    EQ   shift, and go to state 63
    NE   shift, and go to state 64
    '>'  shift, and go to state 65
    '<'  shift, and go to state 66
    '-'  shift, and go to state 67
    '+'  shift, and go to state 68
    '*'  shift, and go to state 69
    '/'  shift, and go to state 70
    ')'  shift, and go to state 74


State 58

   25 while_loop: While '(' expression . ')' function_body
   38 expression: expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '>' expression
   44           | expression . GE expression
   45           | expression . LE expression
   46           | expression . NE expression
   47           | expression . EQ expression

    GE   shift, and go to state 61
    LE   shift, and go to state 62
    EQ   shift, and go to state 63
    NE   shift, and go to state 64
    '>'  shift, and go to state 65
    '<'  shift, and go to state 66
    '-'  shift, and go to state 67
    '+'  shift, and go to state 68
    '*'  shift, and go to state 69
    '/'  shift, and go to state 70
    ')'  shift, and go to state 75


State 59

   37 expression: '-' expression .
   38           | expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '>' expression
   44           | expression . GE expression
   45           | expression . LE expression
   46           | expression . NE expression
   47           | expression . EQ expression

    $default  reduce using rule 37 (expression)


State 60

   38 expression: expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '>' expression
   44           | expression . GE expression
   45           | expression . LE expression
   46           | expression . NE expression
   47           | expression . EQ expression
   48           | '(' expression . ')'

    GE   shift, and go to state 61
    LE   shift, and go to state 62
    EQ   shift, and go to state 63
    NE   shift, and go to state 64
    '>'  shift, and go to state 65
    '<'  shift, and go to state 66
    '-'  shift, and go to state 67
    '+'  shift, and go to state 68
    '*'  shift, and go to state 69
    '/'  shift, and go to state 70
    ')'  shift, and go to state 76


State 61

   44 expression: expression GE . expression

    '-'         shift, and go to state 39
    Number      shift, and go to state 40
    Identifier  shift, and go to state 41
    '('         shift, and go to state 43

    function_call  go to state 44
    expression     go to state 77


State 62

   45 expression: expression LE . expression

    '-'         shift, and go to state 39
    Number      shift, and go to state 40
    Identifier  shift, and go to state 41
    '('         shift, and go to state 43

    function_call  go to state 44
    expression     go to state 78


State 63

   47 expression: expression EQ . expression

    '-'         shift, and go to state 39
    Number      shift, and go to state 40
    Identifier  shift, and go to state 41
    '('         shift, and go to state 43

    function_call  go to state 44
    expression     go to state 79


State 64

   46 expression: expression NE . expression

    '-'         shift, and go to state 39
    Number      shift, and go to state 40
    Identifier  shift, and go to state 41
    '('         shift, and go to state 43

    function_call  go to state 44
    expression     go to state 80


State 65

   43 expression: expression '>' . expression

    '-'         shift, and go to state 39
    Number      shift, and go to state 40
    Identifier  shift, and go to state 41
    '('         shift, and go to state 43

    function_call  go to state 44
    expression     go to state 81


State 66

   42 expression: expression '<' . expression

    '-'         shift, and go to state 39
    Number      shift, and go to state 40
    Identifier  shift, and go to state 41
    '('         shift, and go to state 43

    function_call  go to state 44
    expression     go to state 82


State 67

   39 expression: expression '-' . expression

    '-'         shift, and go to state 39
    Number      shift, and go to state 40
    Identifier  shift, and go to state 41
    '('         shift, and go to state 43

    function_call  go to state 44
    expression     go to state 83


State 68

   38 expression: expression '+' . expression

    '-'         shift, and go to state 39
    Number      shift, and go to state 40
    Identifier  shift, and go to state 41
    '('         shift, and go to state 43

    function_call  go to state 44
    expression     go to state 84


State 69

   40 expression: expression '*' . expression

    '-'         shift, and go to state 39
    Number      shift, and go to state 40
    Identifier  shift, and go to state 41
    '('         shift, and go to state 43

    function_call  go to state 44
    expression     go to state 85


State 70

   41 expression: expression '/' . expression

    '-'         shift, and go to state 39
    Number      shift, and go to state 40
    Identifier  shift, and go to state 41
    '('         shift, and go to state 43

    function_call  go to state 44
    expression     go to state 86


State 71

   26 function_call: Identifier '(' expression_list . ')'
   33 expression_list: expression_list . ',' expression

    ')'  shift, and go to state 87
    ','  shift, and go to state 88


State 72

   32 expression_list: expression .
   38 expression: expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '>' expression
   44           | expression . GE expression
   45           | expression . LE expression
   46           | expression . NE expression
   47           | expression . EQ expression

    GE   shift, and go to state 61
    LE   shift, and go to state 62
    EQ   shift, and go to state 63
    NE   shift, and go to state 64
    '>'  shift, and go to state 65
    '<'  shift, and go to state 66
    '-'  shift, and go to state 67
    '+'  shift, and go to state 68
    '*'  shift, and go to state 69
    '/'  shift, and go to state 70

    $default  reduce using rule 32 (expression_list)


State 73

   31 assignment: Identifier '=' expression .
   38 expression: expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '>' expression
   44           | expression . GE expression
   45           | expression . LE expression
   46           | expression . NE expression
   47           | expression . EQ expression

    GE   shift, and go to state 61
    LE   shift, and go to state 62
    EQ   shift, and go to state 63
    NE   shift, and go to state 64
    '>'  shift, and go to state 65
    '<'  shift, and go to state 66
    '-'  shift, and go to state 67
    '+'  shift, and go to state 68
    '*'  shift, and go to state 69
    '/'  shift, and go to state 70

    $default  reduce using rule 31 (assignment)


State 74

   27 if: IF '(' expression ')' . function_body
   28   | IF '(' expression ')' . function_body ELSE function_body

    '{'  shift, and go to state 20

    function_body  go to state 89


State 75

   25 while_loop: While '(' expression ')' . function_body

    '{'  shift, and go to state 20

    function_body  go to state 90


State 76

   48 expression: '(' expression ')' .

    $default  reduce using rule 48 (expression)


State 77

   38 expression: expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '>' expression
   44           | expression . GE expression
   44           | expression GE expression .
   45           | expression . LE expression
   46           | expression . NE expression
   47           | expression . EQ expression

    '-'  shift, and go to state 67
    '+'  shift, and go to state 68
    '*'  shift, and go to state 69
    '/'  shift, and go to state 70

    $default  reduce using rule 44 (expression)


State 78

   38 expression: expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '>' expression
   44           | expression . GE expression
   45           | expression . LE expression
   45           | expression LE expression .
   46           | expression . NE expression
   47           | expression . EQ expression

    '-'  shift, and go to state 67
    '+'  shift, and go to state 68
    '*'  shift, and go to state 69
    '/'  shift, and go to state 70

    $default  reduce using rule 45 (expression)


State 79

   38 expression: expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '>' expression
   44           | expression . GE expression
   45           | expression . LE expression
   46           | expression . NE expression
   47           | expression . EQ expression
   47           | expression EQ expression .

    '-'  shift, and go to state 67
    '+'  shift, and go to state 68
    '*'  shift, and go to state 69
    '/'  shift, and go to state 70

    $default  reduce using rule 47 (expression)


State 80

   38 expression: expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '>' expression
   44           | expression . GE expression
   45           | expression . LE expression
   46           | expression . NE expression
   46           | expression NE expression .
   47           | expression . EQ expression

    '-'  shift, and go to state 67
    '+'  shift, and go to state 68
    '*'  shift, and go to state 69
    '/'  shift, and go to state 70

    $default  reduce using rule 46 (expression)


State 81

   38 expression: expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '>' expression
   43           | expression '>' expression .
   44           | expression . GE expression
   45           | expression . LE expression
   46           | expression . NE expression
   47           | expression . EQ expression

    '-'  shift, and go to state 67
    '+'  shift, and go to state 68
    '*'  shift, and go to state 69
    '/'  shift, and go to state 70

    $default  reduce using rule 43 (expression)


State 82

   38 expression: expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   42           | expression . '<' expression
   42           | expression '<' expression .
   43           | expression . '>' expression
   44           | expression . GE expression
   45           | expression . LE expression
   46           | expression . NE expression
   47           | expression . EQ expression

    '-'  shift, and go to state 67
    '+'  shift, and go to state 68
    '*'  shift, and go to state 69
    '/'  shift, and go to state 70

    $default  reduce using rule 42 (expression)


State 83

   38 expression: expression . '+' expression
   39           | expression . '-' expression
   39           | expression '-' expression .
   40           | expression . '*' expression
   41           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '>' expression
   44           | expression . GE expression
   45           | expression . LE expression
   46           | expression . NE expression
   47           | expression . EQ expression

    '*'  shift, and go to state 69
    '/'  shift, and go to state 70

    $default  reduce using rule 39 (expression)


State 84

   38 expression: expression . '+' expression
   38           | expression '+' expression .
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '>' expression
   44           | expression . GE expression
   45           | expression . LE expression
   46           | expression . NE expression
   47           | expression . EQ expression

    '*'  shift, and go to state 69
    '/'  shift, and go to state 70

    $default  reduce using rule 38 (expression)


State 85

   38 expression: expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   40           | expression '*' expression .
   41           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '>' expression
   44           | expression . GE expression
   45           | expression . LE expression
   46           | expression . NE expression
   47           | expression . EQ expression

    $default  reduce using rule 40 (expression)


State 86

   38 expression: expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   41           | expression '/' expression .
   42           | expression . '<' expression
   43           | expression . '>' expression
   44           | expression . GE expression
   45           | expression . LE expression
   46           | expression . NE expression
   47           | expression . EQ expression

    $default  reduce using rule 41 (expression)


State 87

   26 function_call: Identifier '(' expression_list ')' .

    $default  reduce using rule 26 (function_call)


State 88

   33 expression_list: expression_list ',' . expression

    '-'         shift, and go to state 39
    Number      shift, and go to state 40
    Identifier  shift, and go to state 41
    '('         shift, and go to state 43

    function_call  go to state 44
    expression     go to state 91


State 89

   27 if: IF '(' expression ')' function_body .
   28   | IF '(' expression ')' function_body . ELSE function_body

    ELSE  shift, and go to state 92

    $default  reduce using rule 27 (if)


State 90

   25 while_loop: While '(' expression ')' function_body .

    $default  reduce using rule 25 (while_loop)


State 91

   33 expression_list: expression_list ',' expression .
   38 expression: expression . '+' expression
   39           | expression . '-' expression
   40           | expression . '*' expression
   41           | expression . '/' expression
   42           | expression . '<' expression
   43           | expression . '>' expression
   44           | expression . GE expression
   45           | expression . LE expression
   46           | expression . NE expression
   47           | expression . EQ expression

    GE   shift, and go to state 61
    LE   shift, and go to state 62
    EQ   shift, and go to state 63
    NE   shift, and go to state 64
    '>'  shift, and go to state 65
    '<'  shift, and go to state 66
    '-'  shift, and go to state 67
    '+'  shift, and go to state 68
    '*'  shift, and go to state 69
    '/'  shift, and go to state 70

    $default  reduce using rule 33 (expression_list)


State 92

   28 if: IF '(' expression ')' function_body ELSE . function_body

    '{'  shift, and go to state 20

    function_body  go to state 93


State 93

   28 if: IF '(' expression ')' function_body ELSE function_body .

    $default  reduce using rule 28 (if)
